<resources>
    <string name="app_name">YouTest</string>
    <string name="previous_question">Previous</string>
    <string name="next_question">Next</string>
    <string name="finish_test">Finish</string>
    <string name="radioactive_question">Select one option</string>
    <string name="multi_question">Select multiple options</string>
    <string name="writing_question">Type the answer</string>
    <string name="test_mode">Select Test</string>
    <string name="edit_mode">Test Editor</string>
    <string name="score_point">point</string>
    <string name="empty_answer">The answer can not be empty!</string>
    <string name="select_test">Select test from the list</string>
    <string name="test_results">Test results</string>
    <string name="time_start">"Time start: \t"</string>
    <string name="time_end">"Time finish:\t"</string>
    <string name="user_answers">Your answer:\t\t</string>
    <string name="correct_answers">Correct answer:\t</string>
    <string name="title_activity_login">Sign in</string>

    <string name="test_name" translatable="false">Test name</string>
    <string name="test_description">Test description</string>
    <string name="title_activity_edit_test">Test editor</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shit">ShitActivity</string>
    <string name="select_result">Select saved result</string>
    <string name="statistic_mode">Statistic</string>
    <string name="no_results">No results found</string>
    <string name="title_activity_fabtest">fabtest</string>
    <string name="test_params_tab">Test params</string>
    <string name="questions_tab">Questions</string>
    <string name="request_password">This action requests pasword</string>
    <string name="title_activity_edit_question">EditQuestionActivity</string>

    <string-array name="question_type">
        <item>Single choice</item>
        <item>Multiple choice</item>
        <item>Write-in</item>
    </string-array>
    <string name="question_editor">Question editor</string>
    <string name="question_cost">Cost:\t</string>
</resources>
