<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_the_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.mavl.youtest.theTest"
    android:orientation="vertical">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="1/229"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtCounter"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:text="00:22:21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTimeStart"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:text="00:08:11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtTimeLeft"
            android:layout_weight="1"
            android:textAlignment="center" />

        <TextView
            android:text="1 балл"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPrice"
            android:layout_weight="1"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtQuestionType"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:text="Dummy question type"
                    android:textAlignment="center" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lyQuestion">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtQuestionText"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textAlignment="center"
                        android:text="Dummy question" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/dummy_pic"
                        android:id="@+id/imageView"
                        android:scaleType="fitStart"
                        android:adjustViewBounds="true"
                        android:cropToPadding="false" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/lyOptions">

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lyButtons">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btPrevious"
                        android:layout_weight="1"
                        android:text="@string/previous_question" />

                    <Button
                        android:text="@string/finish_test"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btFinish"
                        android:layout_weight="1" />

                    <Button
                        android:text="@string/next_question"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btNext"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>
